kubernetes/monitoring/prometheus/authorization.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
