kubernetes/monitoring/prometheus/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9090"
spec:
  selector:
    app: prometheus
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
