kubernetes/monitoring/prometheus/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: monitoring
  name: prometheus-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: prometheus.local.com
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus
              servicePort: 80
